tests/fixtures/fail/no-var.ts
// Violates: no-var
export function bad(): void {
    var x = 1
    console.log(x)
}
